--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"pollock.aternos.me",
+	"ip":"chuyenmcvn.aternos.me",
 	"port": "23257",
-	"name": "afkbot1",
+	"name": "bot24/7",
 	"auto-night-skip":"true"
 }
